--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
+
 }
 
 main.dark,
@@ -27,6 +28,10 @@ html,
 body {
     height: 100%;
 }
+
+a:link {
+    color: blue;
+  }
 
 body {
     display: flex;
